--- a/OrgsAlura/app/src/main/res/values/strings.xml
+++ b/OrgsAlura/app/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
 <resources>
-    <string name="app_name">Orgs</string>
-    <string name="salada_de_frutas">Salada de frutas</string>
+    <string name="app_name">Lista de Produtos</string>
     <string name="produto">Produto:</string>
 </resources>
