--- a/OrgsAlura/app/src/main/res/values/strings.xml
+++ b/OrgsAlura/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Lista de Produtos</string>
     <string name="produto">Produto:</string>
+    <string name="imagem_do_produto">imagem do produto</string>
 </resources>
