--- a/OrgsAlura/app/src/main/res/values/strings.xml
+++ b/OrgsAlura/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Lista de Produtos</string>
     <string name="produto">Produto:</string>
     <string name="imagem_do_produto">imagem do produto</string>
+    <string name="novo_produto">Novo produto</string>
 </resources>
