--- a/DrinkmeJava/app/src/main/res/values/strings.xml
+++ b/DrinkmeJava/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">DrinkmeJava</string>
     <string name="notificar">NOTIFICAR</string>
     <string name="intervalo_min">Intervalo(min)</string>
+    <string name="pause">Pausar</string>
 </resources>
